# gemma-android

./: .gitignore  build.gradle  config.gradle  gradle.properties  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle  gma.keystore  gradle.properties  proguard-rules.pro  proguard.cfg
app/libs/: bluetoothlib-release.aar  com_cybex_gma_client_ui_JNIUtil.h
app/src/main/: AndroidManifest.xml
app/src/main/assets/: finger.html
app/src/main/cpp/: JNIUtil.cpp  eosJni.cpp  keosdlib.hpp
app/src/main/res/anim/: anim_bottom_in.xml  anim_bottom_out.xml  gesture_shake.xml  shake_cycle.xml  slide_in_bottom.xml  slide_out_bottom.xml
app/src/main/res/color/: eos_account_change_color_selector.xml
app/src/main/res/drawable/: bezier_anim_default.xml  bezier_svg.xml  bezier_svg_default.xml  bg_edt_normal.xml  bg_edt_scarlet.xml  bg_shape_btn_disabled.xml  bg_shape_btn_enabled.xml  bg_shape_btn_pressed.xml  bg_shape_radius_blue_selector.xml  bg_shape_radius_white.xml  bg_shape_radius_white_pressed.xml  bg_shape_radius_white_selector.xml  bg_shape_radius_white_with_border.xml  bg_shape_white_selector.xml  bg_switch_track_blue.xml  bg_switch_track_grey.xml  custom_divider.xml  dash_line.xml  dash_line_vertical.xml  edt_bg_normal.xml  edt_bg_selected.xml  eos_bezier_anim01.xml  eos_bezier_anim04.xml  eos_bezier_anim09.xml  eos_bezier_anim10.xml  eos_bezier_anim12.xml  eos_bezier_anim_default.xml  eos_bg_shape_btn_disabled.xml  eos_bg_shape_btn_enabled.xml  eos_bg_shape_btn_pressed.xml  eos_bg_shape_radius_blue_selcted.xml  eos_bg_shape_radius_white_with_border.xml  eos_bg_shape_white.xml  eos_bg_shape_white_pressed.xml  eos_cursor_custom.xml  eos_selector_edt_bg.xml  eos_shape_corner_button.xml  eos_shape_corner_token_card.xml  selector_btn_transfer.xml  selector_edt_bg.xml  (+27 more)
app/src/main/res/layout/: activity_about.xml  activity_activate_account_method.xml  activity_back_up_mne_warning.xml  activity_backup_mne.xml  activity_backup_private_key.xml  activity_barcode_scan.xml  activity_base.xml  activity_bluetooth_backup_mne_guide.xml  activity_bluetooth_config_wallet.xml  activity_bluetooth_config_wookong_bio.xml  activity_bluetooth_import_wallet.xml  activity_bluetooth_pair.xml  activity_bluetooth_wallet_detail.xml  activity_bluetooth_wallet_manage.xml  activity_check_mne.xml  activity_common_webview.xml  activity_create_bluetooth_wallet.xml  activity_create_eos_account.xml  activity_create_lock_pattern.xml  activity_create_method.xml  activity_create_success.xml  activity_create_wallet.xml  activity_create_wallet_old.xml  activity_delegate.xml  (+231 more)
(+1277 files in other folders)
